# gym-app

./: .gitignore  API_SPECIFICATIONS.md  BUSINESS_REQUIREMENTS.md  CLAUDE.md  ISSUES.md  ISSUE_CLASSIFICATION.md  MVP_REQUIREMENTS.md  NON_FUNCTIONAL_REQUIREMENTS.md  TECHNICAL_SPECIFICATIONS.md  classify-issues.sh  classify_issues.py  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_fk_indexes.py
backend/app/: __init__.py
backend/app/core/: config.py  logging.py
backend/app/models/: base.py  checkin.py  client.py  session.py  user.py  workout.py
backend/app/schemas/: checkin.py
backend/app/services/: checkin_service.py
backend/src/gym_api/: config.py  database.py  main.py
backend/tests/: conftest.py
backend/tests/services/: test_auto_attendance.py
backend/tests/test_auth/: helpers.py  test_auth_endpoints.py  test_auth_service.py  test_dependencies.py  test_hibp_service.py  test_mfa_service.py  test_password_service.py
backend/tests/test_middleware/: test_error_handler.py  test_idempotency.py  test_rate_limiter.py  test_request_id.py  test_security_headers.py
backend/tests/test_models/: test_client.py  test_client_membership.py  test_plan_template.py  test_user.py
backend/tests/test_routers/: helpers.py  test_accounts.py  test_agreements.py  test_ai_summaries.py  test_analytics.py  test_audit_logs.py  test_billing.py  test_calendar.py  test_check_ins.py  test_clients.py  test_custom_domains.py  test_goals.py  (+19 more)
(+302 files in other folders)
